# sudoku-solver

./: Cargo.toml  LICENSE  README.md  help.html  note.txt  search-index.js  settings.html  source-files.js
.github/workflows/: coverage.yml  devskim.yml  rust.yml  rust_beta.yml  rust_doc.yml  rust_doc_check.yml  rust_doc_test.yml  rust_test.yml
benches/: bench.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/convert/: trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/error/: trait.Error.js
implementors/core/fmt/: trait.Binary.js  trait.Debug.js  trait.Display.js  (+3 more)
src/: cell.rs  error.rs  grid.rs  lib.rs  main.rs  size.rs  sudoku.rs  test.rs
src/cell/: guess.rs  possibility.rs
src/grid/: iterator.rs  position.rs
src/sudoku/: cell.rs.html  error.rs.html  grid.rs.html  lib.rs.html  size.rs.html
sudoku/: all.html  index.html  sidebar-items.js
sudoku/cell/: index.html  sidebar-items.js  struct.Cell.html  struct.CellNumber.html
sudoku/error/: enum.ExampleError.html  enum.SetError.html  index.html  sidebar-items.js
sudoku/grid/: enum.Direction.html  enum.SolveError.html  enum.VerificationError.html  enum.VerificationResult.html  index.html  sidebar-items.js  struct.BackTracePositionTracker.html  struct.CellCoordinate.html  struct.CellPosition.html  struct.Column.html  struct.Row.html  struct.Square.html  struct.Sudoku.html  trait.SudokuIter.html
sudoku/size/: index.html  sidebar-items.js  struct.GameSize.html
(+35 files in other folders)
