[package]
name = "sudoku"
version = "0.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
conrod_core = "0.74.0"
serde = { version = "1.0", features = ["derive"]}
approx = "0.5.0"
array-macro = "2.1.0"

[dev-dependencies]
version-sync = "0.9.2"
criterion = "0.3.4"

[[bench]]
name = "bench"
harness = false
