[package]
name = "sudoku"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# conrod_core = "0.74.0"
serde = { version = "1.0", features = ["derive"]}
approx = "0.5.1"
array-macro = "2.1.5"
console = "0.15.6"
rand = "0.8.5"

[dev-dependencies]
version-sync = "0.9.4"
criterion = "0.3.5"

[[bench]]
name = "bench"
harness = false
